config/poid.yaml
apiVersion: v1
kind: Pod
metadata:
  name: poid

spec:
  containers:
  - image: poistargram/port:cmd
    name: poid
    ports:
    - containerPort: 1234
      protocol: TCP
