config/poi-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: poi-service
spec:
    ports:
    - port: 80
      targetPort: four
      name: fhttp
    - port: 81
      targetPort: seven
      name: shttp
    selector:
        poi: minam
